Updated backend URL for Azure

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
     <div id="search-results"></div>
 
     <script>
-        const backendUrl = "http://localhost:3000";
+        const backendUrl = "https://product-app-grh2evgjduhsedcj.eastus-01.azurewebsites.net";
+
 
         // Function to Add Product
         async function addProduct() {
