--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             fetchProducts(); // Refresh product list after adding
         }
 
-// Function to Fetch Products (Updated)
+// Function to Fetch Products with Delete Button
 async function fetchProducts() {
     const response = await fetch(`${backendUrl}/products`);
     const products = await response.json();
@@ -57,30 +57,30 @@ async function fetchProducts() {
     productList.innerHTML = "";
 
     products.forEach(product => {
-        console.log("Product ID:", product.id); // ✅ Debugging log
-
         const productDiv = document.createElement("div");
         productDiv.classList.add("product");
         productDiv.innerHTML = `
             <strong>${product.name}</strong> - $${product.price} <br> ${product.description} 
+            <br>
             <button class="delete-btn" onclick="deleteProduct('${product.id}')">Delete</button>
         `;
         productList.appendChild(productDiv);
     });
 }
 
-// ✅ Function to Delete Product
+// Function to Delete Product
 async function deleteProduct(productId) {
     if (!confirm("Are you sure you want to delete this product?")) return;
 
     const response = await fetch(`${backendUrl}/delete-product/${productId}`, {
-        method: "DELETE",
+        method: "DELETE"
     });
 
     const data = await response.json();
     alert(data.message);
-    fetchProducts();  // Refresh product list after deleting
+    fetchProducts(); // Refresh product list after deletion
 }
+
 
         // Function to Search Products
         async function searchProducts() {
