--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
     <script>
         const backendUrl = "https://product-app-grh2evgjduhsedcj.eastus-01.azurewebsites.net";
 
-        // Function to Add Product
         async function addProduct() {
             const name = document.getElementById("name").value;
             const price = document.getElementById("price").value;
@@ -46,10 +45,9 @@
 
             const data = await response.json();
             alert(data.message);
-            fetchProducts(); // Refresh product list after adding
+            fetchProducts(); 
         }
 
-// Function to Fetch Products with Delete Button
 async function fetchProducts() {
     const response = await fetch(`${backendUrl}/products`);
     const products = await response.json();
@@ -68,7 +66,6 @@ async function fetchProducts() {
     });
 }
 
-// Function to Delete Product
 async function deleteProduct(productId) {
     if (!confirm("Are you sure you want to delete this product?")) return;
 
@@ -78,11 +75,10 @@ async function deleteProduct(productId) {
 
     const data = await response.json();
     alert(data.message);
-    fetchProducts(); // Refresh product list after deletion
+    fetchProducts(); 
 }
 
 
-        // Function to Search Products
         async function searchProducts() {
             const query = document.getElementById("searchQuery").value;
             if (!query) {
@@ -113,7 +109,6 @@ async function deleteProduct(productId) {
             });
         }
 
-        // Load products when the page loads
         window.onload = fetchProducts;
     </script>
 </body>
